Bis kontakt weiterkommen :)

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -497,7 +497,7 @@
             <label for="D-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li> <hr>
-        <li> <a href="#">Presse und Downloads</a> </li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li> <hr>
       </ul>
