--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -104,7 +104,7 @@
                   <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/jetztspenden.html">Jetzt Spenden</a>
                 </li>
                 <li class="dropdown-submenu">
-                  <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/partnerlandregelmaesig.html">Pate werden</a>
+                  <a  class="dropdown-item" tabindex="-1" href="https://aufbau-website.de/craft/web/spenden/patewerden.html">Pate werden</a>
                 </li>
                 <li class="dropdown-submenu">
                   <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/schenkenundspenden.html">Schenken und Spenden</a>
@@ -149,7 +149,7 @@
                     </ul>
                   </li>
 
-                  <li class="dropdown-item"> <a href="#">Presse und Downloads</a> </li>
+                  <li class="dropdown-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
                   <li class="dropdown-divider"></li>
