--- a/templates/craft_sicherungWebsite/templates/blog/index.html
+++ b/templates/craft_sicherungWebsite/templates/blog/index.html
@@ -37,10 +37,15 @@
       {% set entries = craft.entries.section('blog').level('1').limit(3) %}
       <div class="col-sm-8">
         {% for entry in entries %}
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <img class="img-fluid"src="{% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="blogbild" style="padding-bottom: 1rem;">
-        <div id="info"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }} - {%if entry.blogKategorie.one() is not null %} in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a> {% endif %}</div>
+        </a>
+        <div id="info"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }} - {%if entry.blogKategorie.one() is not null %} in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a> {% endif %}
+        {%if entry.blogKategorie.inReverse().one() is not null %} und <a href="{{ entry.blogKategorie.inReverse().one().url }}">{{ entry.blogKategorie.inReverse().one().title }}</a> {% endif %}</div>
         <!-- Mit der oberen Zeile wird die Kategorie des Artikels abgerufen und angezeigt und sofort klickbar -->
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <h2 style="padding-bottom: 0;"> {{ entry.title}}</h2>
+        </a>
         <div id="copy" style="padding-top: 1rem; padding-bottom: 3.5rem;"> {{ entry.anleser }}
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen</a> </div>
         {% set counter = counter + 1 %}
