--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
@@ -40,7 +40,6 @@
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-
   <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;" id="allgemein">
     {% set entry = craft.entries.section('fuerSie').slug('peru-erwartet').one() %}
 
@@ -75,7 +74,35 @@
   <div class="container achterspaltenlayout" id="arbeit">
     {% set entry = craft.entries.section('fuerSie').slug('arbeit-freiwilligen').one() %}
     <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
-    <div id="copy"> {{ entry.anleser}}</div>
+    <div id="copy" style="padding-bottom: 1rem;"> {{ entry.anleser}}</div>
+
+    {% set entries = entry.children().all() %}
+    {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
+    <div id="accordion">
+      {% set counter = 0 %}
+      {% for entry in entries %} {% set counter = counter + 1 %}
+      <div class="card" style="border-radius: 0; border-color: white; border-top-color: #ed6e2c; border-width: 1px; margin-bottom: 20px;">
+        <div class="card-header" style="border-bottom: 0; border-radius: 0; background-color: #f8f5f2;">
+        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
+          <div class="row">
+            <div class="col-md-11 col-10">
+              <h4> {{ entry.title }} </h4>
+            </div>
+            <div class="col-md-1 col-2">
+              <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
+            </div>
+          </div>
+        </a>
+          </div>
+          <div id="{{counter}}" class="collapse" data-parent="#accordion">
+            <div class="card-body" id="copy" style="background-color: #f8f5f2;">
+              {{ entry.anleser }}
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div> <!-- Das Akkordion-Div wird hier verwendet -->
+
   </div>
 
   <div class="container achterspaltenlayout" id="zentrum">
@@ -116,37 +143,19 @@
   </div>
 
   <div class="container zwoelferspaltenlayout text-center" style="margin-top: 0;">
-    <hr style="margin-bottom: 1rem;">
+    <hr style="margin-bottom: 2rem;">
    <div id="anleser" style="padding-bottom: 3rem;"> Weitere Informationen zum Freiwilligendienst </div>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('deine-bewerbung').one() %}
-  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 2rem;">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.anleser }}</div>
-    </div>
-  </div>
-  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+  {% include '_layouts/weiterleitungkorrekt'%}
+
+  <div style="padding-bottom: 2rem;"></div>
 
   {% set entry = craft.entries.section('fuerSie').slug('erfahrungsberichte').one() %}
-  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 4rem;">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.anleser }}</div>
-    </div>
-  </div>
-  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+  {% include '_layouts/weiterleitungkorrekt'%}
 
-
+  <div style="padding-bottom: 4rem;"></div>
 
 </div> <!-- Weißer Hintergrund-Div -->
 
