--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
@@ -51,6 +51,10 @@
     font-style: normal;
 }
 
+.stylevorgaben2 #headerbild { /*Damit die Bilder nicht oben abgeschnitten werden bei großen BIldschirmen */
+  object-fit: cover;
+  object-position: 50% 0; /* positioned top left of the content box */
+}
 
 .stylevorgaben2 .no-padding {
   padding-left: 0;
@@ -344,6 +348,10 @@ body {
 }
 
 .stylevorgaben2 a { /*Einfärben aller Links */
+  color: #0062ae;
+}
+
+.stylevorgaben2 a p { /*Einfärben aller Links in paragraphen*/
   color: #0062ae;
 }
 
